<package>
  <name>eusgazebo</name>
  <version>0.1.0</version>
  <description>The eusgazebo package</description>
  <maintainer email="k-okada@jsk.t.u-tokyo.ac.jp">Kei Okada</maintainer>
  <maintainer email="murooka@jsk.t.u-tokyo.ac.jp">Masaki Murooka</maintainer>

  <license>BSD</license>

  <!-- <url type="website">http://wiki.ros.org/eusgazebo</url> -->

  <author email="murooka@jsk.t.u-tokyo.ac.jp">Masaki Murooka</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>gazebo_ros</run_depend>
  <run_depend>roseus</run_depend>
  <run_depend>jsk_model_tools</run_depend>
</package>