<package>
  <name>euslisp</name>
  <version>1.1.20</version>
  <description>This packages contains humanoid robot modeling software based on EusLisp language developed by researchers and students at JSK Robotics Laboratory at the University of Tokyo, Japan.</description>
  <maintainer email="k-okada@jsk.t.u-tokyo.ac.jp">Kei Okada</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/euslisp</url>
  <url type="bugtracker">https://sourceforge.net/p/jskeus/tickets/</url>

  <author>Toshihiro Matsui</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>git</build_depend>
  <build_depend>rosbuild</build_depend>
  <build_depend>rostest</build_depend>
  <build_depend>opengl</build_depend>
  <build_depend>libjpeg</build_depend>
  <build_depend>libx11-dev</build_depend>
  <build_depend>libxext</build_depend>
  <build_depend>libpng12-dev</build_depend>
  <build_depend>libpq-dev</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>mk</build_depend>
  <build_depend>xfonts-100dpi</build_depend>
  <build_depend>xfonts-75dpi</build_depend>
  <build_depend>xfont-server</build_depend>

  <run_depend>rostest</run_depend>
  <run_depend>opengl</run_depend>
  <run_depend>libjpeg</run_depend>
  <run_depend>libx11-dev</run_depend>
  <run_depend>libxext</run_depend>
  <run_depend>libpng12-dev</run_depend>
  <run_depend>libpq-dev</run_depend>
  <run_depend>xfonts-100dpi</run_depend>
  <run_depend>xfonts-75dpi</run_depend>
  <run_depend>xfont-server</run_depend>

  <export>
    <cpp cflags="-I${prefix}/eus/include"/>
    <rosdoc config="rosdoc.yaml"/>
  </export>
</package>
