<?xml version="1.0"?>
<package>
  <name>geneus</name>
  <version>1.1.16</version>
  <description>EusLisp ROS message and service generators</description>
  <maintainer email="k-okada@jsk.t.u-tokyo.ac.jp">Kei Okada</maintainer>
  <license>BSD</license>

  <author>Kei Okada</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>genmsg</build_depend>
  <build_depend>euslisp</build_depend>
  <build_depend>rospy</build_depend>

  <run_depend>genmsg</run_depend>
  <run_depend>euslisp</run_depend>
  <run_depend>rospy</run_depend>

  <export>
    <message_generator>eus</message_generator>
  </export>
</package>