<?xml version="1.0"?>
<package>
  <name>jsk_roseus</name>
  <version>1.7.4</version>
  <description>
   <p>Metapackage that contains roseus package for jsk-ros-pkg</p>
  </description>

  <maintainer email="k-okada@jsk.t.u-tokyo.ac.jp">Kei Okada</maintainer>
  <author email="ueda@jsk.t.u-tokyo.ac.jp">Ryohei Ueda</author>
  <author email="k-okada@jsk.t.u-tokyo.ac.jp">Kei Okada</author>
  <author email="youhei@jsk.imi.i.u-tokyo.ac.jp">Youhei Kakiuchi</author>

  <license>BSD</license>
  <url type="website">http://ros.org/wiki/jsk_roseus</url>
  <url type="repository">https://github.com/jsk-ros-pkg/jsk_roseus</url>
  <url type="bugtracker">https://github.com/jsk-ros-pkg/jsk_roseus/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>euslisp</run_depend>
  <run_depend>geneus</run_depend>
  <run_depend>roseus</run_depend>

  <!-- this is not necessary but added to avoid race conding on
       generating .catkin file, see https://github.com/ros/catkin/pull/671 -->
  <!-- build_depend>roseus</build_depend --> <!-- removed, WARNING: Metapackage "jsk_roseus" should not have other dependencies besides a buildtool_depend on catkin and run_depends.
 -->

  <export>
    <metapackage/>
  </export>
</package>
