<package>
  <name>roseus</name>
  <version>1.7.4</version>
  <description>EusLisp client for ROS Robot Operating System.</description>
  <maintainer email="k-okada@jsk.t.u-tokyo.ac.jp">Kei Okada</maintainer>

  <license>BSD</license>

  <url type="website">http://pr.willowgarage.com/wiki/roseus</url>
  <!-- <url type="bugtracker"></url> -->

  <author email="k-okada@jsk.t.u-tokyo.ac.jp">Kei Okada</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geneus</build_depend>
  <build_depend>rosbash</build_depend>
  <build_depend>roslang</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rosnode</build_depend>
  <build_depend>rospack</build_depend>
  <build_depend>rostest</build_depend>
  <build_depend>rosmsg</build_depend>
  <build_depend>rostopic</build_depend>
  <build_depend>euslisp</build_depend>
  <build_depend>jskeus</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>angles</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>mk</build_depend>
  <build_depend>rosbuild</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>shape_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>actionlib_tutorials</build_depend>
  <build_depend>coreutils</build_depend>

  <run_depend>geneus</run_depend>
  <run_depend>rosbash</run_depend>
  <run_depend>roslang</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rosnode</run_depend>
  <run_depend>rospack</run_depend>
  <run_depend>rostest</run_depend>
  <run_depend>rosmsg</run_depend>
  <run_depend>euslisp</run_depend>
  <run_depend>jskeus</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>tf2_ros</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>shape_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>actionlib_tutorials</run_depend>

  <test_depend>xvfb</test_depend>

</package>
